overflow scroll fixed

--- a/assets/sass/home/_style.sass
+++ b/assets/sass/home/_style.sass
@@ -510,6 +510,7 @@
     background: var(--gradient)
     background: url('../images/bg.png')
     background-size: cover
+    overflow: hidden
     .container
         padding: 85px 15px
         position: relative
